@@ -9,19 +9,20 @@ import fci.swe.advanced_software.repositories.course.CourseSearchRepository;
 import fci.swe.advanced_software.repositories.users.InstructorRepository;
 import fci.swe.advanced_software.utils.AuthUtils;
 import fci.swe.advanced_software.utils.Constants;
+import fci.swe.advanced_software.utils.RepositoryUtils;
 import fci.swe.advanced_software.utils.ResponseEntityBuilder;
 import fci.swe.advanced_software.utils.mappers.courses.CourseMapper;
 import fci.swe.advanced_software.utils.mappers.courses.CourseToElasticsearchMapper;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -33,16 +34,18 @@ public class CourseService implements ICourseService {
     private final AuthUtils authUtils;
     private final CourseSearchRepository courseSearchRepository;
     private final CourseToElasticsearchMapper courseToElasticsearchMapper;
+    private final RepositoryUtils repositoryUtils;
 
     @Override
-    public ResponseEntity<?> getAllCourses(Pageable pageable) {
-        Page<Course> coursePage = courseRepository.findAll(pageable);
+    public ResponseEntity<?> getAllCourses(Integer page, Integer size) {
+        Pageable pageable = repositoryUtils.getPageable(page, size, Sort.Direction.ASC, "createdAt");
+        Page<Course> courses = courseRepository.findAll(pageable);
 
-        List<CourseDto> courses = coursePage.stream()
+        List<CourseDto> response = courses
                 .map(courseMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
 
-        return buildSuccessResponse("Courses retrieved successfully", courses, HttpStatus.OK);
+        return buildSuccessResponse("Courses retrieved successfully", response, HttpStatus.OK);
     }
 
     @Override
@@ -63,9 +66,9 @@ public class CourseService implements ICourseService {
     @Override
     public ResponseEntity<?> createCourse(CourseDto courseDto) {
 
-        courseDto.setInstructorId(authUtils.getCurrentUserId());
         Course course = courseMapper.toEntity(courseDto);
-        Instructor instructor = instructorRepository.findById(authUtils.getCurrentUserId()).orElse(null);
+
+        Instructor instructor = course.getInstructor();
 
         Course savedCourse = courseRepository.save(course);
         CourseSearchDto esCourse = courseToElasticsearchMapper.toES(savedCourse);
@@ -94,7 +97,7 @@ public class CourseService implements ICourseService {
                     .build();
         }
 
-        if(courseDto.getInstructorId() == null) {
+        if (courseDto.getInstructorId() == null) {
             courseDto.setInstructorId(course.getInstructor().getId());
         }
 
